--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,63 +1,54 @@
-name: 签到
+name: cloundqiandao
 
 on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   schedule:
-    - cron: 40 14,4 * * *
-  watch:
-    types: started
-
+    - cron: 10 2,14 * * *
+    
 jobs:
-  build:
+  check-in:
     runs-on: ubuntu-latest
-    if: github.event_name == 'schedule' || github.event_name == 'watch' && github.event.repository.owner.id == github.event.sender.id
 
     steps:
     - uses: actions/checkout@v2
-    - name: 初始化Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: 安装依赖包
+
+    - name: Install Python
       run: |
-        pip install -r requirements.txt
-    - name: 执行签到
+        sudo apt update && \
+        sudo apt install python3
+      
+    - name: requirements
       run: |
-        echo -n "This IP is: " 
-        curl -s ifconfig.me
-        echo ' '
+        pip3 install -r requirements.txt
         
+    - name: Checkin
+      run: |
         user='${{ secrets.USER }}'
         pwd='${{ secrets.PWD }}'
         
         user_list=()
         pwd_list=()
-
-        IFS="#"
-
+        IFS=","
         for u in ${user[*]}
         do
         user_list[${#user_list[*]}]=${u}
         done
-
         for p in ${pwd[*]}
         do
         pwd_list[${#pwd_list[*]}]=${p}
         done
-
         user_num=${#user_list[*]}
         pwd_num=${#pwd_list[*]}
-
         if [ $user_num != $pwd_num ];then
         echo "账号和密码个数不对应"
         exit 1
         else
         echo "共有 $user_num 个账号，即将开始签到"
         fi
-
         for ((i=0;i<$user_num;i++))
         do
-        python3 checkin.py <<EOF
-        ${user_list[$i]}
-        ${pwd_list[$i]}
-        EOF
+        python3 checkin.py --username ${user_list[$i]} --password ${pwd_list[$i]}
         done
