--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: cloundqiandao
+name: Checkin
 
 on:
   push:
@@ -6,12 +6,12 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: 10 2,14 * * *
-    
+    - cron: 0 2,14 * * *
+
 jobs:
-  check-in:
+  build:
     runs-on: ubuntu-latest
- 
+
     steps:
     - uses: actions/checkout@v2
 
@@ -31,24 +31,35 @@ jobs:
         
         user_list=()
         pwd_list=()
+
         IFS=","
+
         for u in ${user[*]}
         do
+        echo ${u}
         user_list[${#user_list[*]}]=${u}
         done
+
         for p in ${pwd[*]}
         do
+        echo ${p}
         pwd_list[${#pwd_list[*]}]=${p}
         done
+
         user_num=${#user_list[*]}
         pwd_num=${#pwd_list[*]}
+
         if [ $user_num != $pwd_num ];then
         echo "账号和密码个数不对应"
         exit 1
         else
         echo "共有 $user_num 个账号，即将开始签到"
         fi
+
         for ((i=0;i<$user_num;i++))
         do
-        python3 checkin.py --username ${user_list[$i]} --password ${pwd_list[$i]}
+        python3 C189Checkin.py <<EOF
+        ${user_list[$i]}
+        ${pwd_list[$i]}
+        EOF
         done
