--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -28,6 +28,8 @@ jobs:
       run: |
         user='${{ secrets.USER }}'
         pwd='${{ secrets.PWD }}'
+        ddtoken='${{ secrets.token }}'
+        ddsecret='${{ secrets.secret }}'
         
         user_list=()
         pwd_list=()
