--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -24,11 +24,13 @@ jobs:
       run: |
         pip3 install -r requirements.txt
         
+    - name: PushPlus_push
+        pushplus_token='${{ secrets.TOKEN }}'      
+        
     - name: Checkin
       run: |
         user='${{ secrets.USER }}'
         pwd='${{ secrets.PWD }}'
-        pushplus_token='${{ secrets.TOKEN }}'
         
         user_list=()
         pwd_list=()
@@ -45,12 +47,6 @@ jobs:
         do
         echo ${p}
         pwd_list[${#pwd_list[*]}]=${p}
-        done
-
-        for t in ${pushplus_token[*]}
-        do
-        echo ${t}
-        pushplus_token[${#pushplus_token[*]}]=${t}
         done
 
         user_num=${#user_list[*]}
@@ -70,3 +66,5 @@ jobs:
         ${pwd_list[$i]}
         EOF
         done
+        
+
