--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -59,7 +59,7 @@ jobs:
 
         for ((i=0;i<$user_num;i++))
         do
-        python3 checkinpushplus.py <<EOF
+        python3 checkin.py <<EOF
         ${user_list[$i]}
         ${pwd_list[$i]}
         EOF
