--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         pip install -r requirements.txt
     - name: 签到
       run: |
-        python3 ./checkin.py
+        python3 ./checkinpushplus.py
       env:
         #QYWX_CORPID: ${{ secrets.QYWX_CORPID }}
         #QYWX_CORPSECRET: ${{ secrets.QYWX_CORPSECRET }}
