--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,8 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: 0 2,14 * * *
-
+    - cron:
 jobs:
   build:
     runs-on: ubuntu-latest
