--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: Checkin
+name: 天翼云盘签到抽奖
 
 on:
   push:
@@ -58,7 +58,7 @@ jobs:
 
         for ((i=0;i<$user_num;i++))
         do
-        python3 checkinpushplus.py <<EOF
+        python3 checkin.py <<EOF
         ${user_list[$i]}
         ${pwd_list[$i]}
         EOF
