--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,20 +1,19 @@
-name: 天翼云盘签到抽奖
+name: 签到
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
   schedule:
-    - cron: ''
+    - cron: 0 4, * * *
+  watch:
+    types: started
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Install Python
+      - name: Checkout codes
+        uses: actions/checkout@v3
+      - name: Install Python
       run: |
         sudo apt update && \
         sudo apt install python3
@@ -22,46 +21,15 @@ jobs:
     - name: requirements
       run: |
         pip3 install -r requirements.txt
-            
-        
-    - name: Checkin
-      run: |
-        user='${{ secrets.USER }}'
-        pwd='${{ secrets.PWD }}'
-        
-        user_list=()
-        pwd_list=()
-
-        IFS=","
-
-        for u in ${user[*]}
-        do
-        echo ${u}
-        user_list[${#user_list[*]}]=${u}
-        done
-
-        for p in ${pwd[*]}
-        do
-        echo ${p}
-        pwd_list[${#pwd_list[*]}]=${p}
-        done
-
-        user_num=${#user_list[*]}
-        pwd_num=${#pwd_list[*]}
-
-        if [ $user_num != $pwd_num ];then
-        echo "账号和密码个数不对应"
-        exit 1
-        else
-        echo "共有 $user_num 个账号，即将开始签到"
-        fi
-
-        for ((i=0;i<$user_num;i++))
-        do
-        python3 checkin.py <<EOF
-        ${user_list[$i]}
-        ${pwd_list[$i]}
-        EOF
-        done
-        
-
+          
+      - name: 初始化Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+         
+      - name: 开始
+        run: |
+          pip3 install requests
+          user='${{ secrets.USER }}'
+          passwd='${{ secrets.PWD }}' 
+          python3 checkin.py ${user} ${passwd}
