--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: 签到
+name: 刷步
 
 on:
   schedule:
@@ -13,14 +13,10 @@ jobs:
     steps:
       - name: Checkout codes
         uses: actions/checkout@v3
-      - name: Install Python
-      run: |
-        sudo apt update && \
-        sudo apt install python3
-      
-    - name: requirements
-      run: |
-        pip3 install -r requirements.txt
+      - name: Update system and install zsh
+        run: |
+          sudo -E apt-get -qq update
+          sudo -E apt-get install zsh -y
           
       - name: 初始化Python
         uses: actions/setup-python@v4
