--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,27 +1,28 @@
-name: 刷步
+name: 签到
 
 on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   schedule:
-    - cron: 0 4, * * *
-  watch:
-    types: started
-  workflow_dispatch:
+    - cron: ''
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout codes
-        uses: actions/checkout@v3
-      - name: Update system and install zsh
-        run: |
-          sudo -E apt-get -qq update
-          sudo -E apt-get install zsh -y
-          
-      - name: 初始化Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - uses: actions/checkout@v2
+
+    - name: Install Python
+      run: |
+        sudo apt update && \
+        sudo apt install python3
+      
+    - name: requirements
+      run: |
+        pip3 install -r requirements.txt
          
       - name: 开始
         run: |
