--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: ''
+    - cron: 0 4, * * *
 jobs:
   build:
     runs-on: ubuntu-latest
