--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: 签到
+name: Cloud189Checkin
 
 on:
   push:
@@ -6,29 +6,55 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: '0 22,14 * * *'
-  watch:
-    types: started
+    - cron: 0 2,14 * * *
 
 jobs:
-  build:
+  check-in:
     runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
     - uses: actions/checkout@v2
-    - name: 初始化Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: 签到
-      run: |
-        pip install -r requirements.txt
-        
-        username='${{ secrets.USER }}'.split(',')
-        password='${{ secrets.PWD }}'.split(',')
-        plustoken='${{ secrets.token }}'
-        
-        python3 tyyun.py
 
+    - name: Install Python
+      run: |
+        sudo apt update && \
+        sudo apt install python3
+      
+    - name: requirements
+      run: |
+        pip3 install -r requirements.txt
+        
+    - name: Checkin
+      run: |
+        user='${{ secrets.USER }}'
+        pwd='${{ secrets.PWD }}'
+        
+        user_list=()
+        pwd_list=()
+
+        IFS=","
+
+        for u in ${user[*]}
+        do
+        user_list[${#user_list[*]}]=${u}
+        done
+
+        for p in ${pwd[*]}
+        do
+        pwd_list[${#pwd_list[*]}]=${p}
+        done
+
+        user_num=${#user_list[*]}
+        pwd_num=${#pwd_list[*]}
+
+        if [ $user_num != $pwd_num ];then
+        echo "账号和密码个数不对应"
+        exit 1
+        else
+        echo "共有 $user_num 个账号，即将开始签到"
+        fi
+
+        for ((i=0;i<$user_num;i++))
+        do
+        python3 checkin.py --username ${user_list[$i]} --password ${pwd_list[$i]}
         done
